# pesquisa_md

./: .env  README.md  app.py  conect.py  obrigado.py  pyproject.toml  requirements.txt
